2014-04-01  Zan Dobersek  <zdobersek@igalia.com>

        [GTK] Don't copy the ResourceResponse object in webkitWebViewDecidePolicy
        https://bugs.webkit.org/show_bug.cgi?id=131015

        Reviewed by Carlos Garcia Campos.

        * UIProcess/API/gtk/WebKitWebView.cpp:
        (webkitWebViewDecidePolicy): Avoid copying the ResourceResponce object returned by webkitURIResponseGetResourceResponse.
        That function already returns a reference, so the return value should be stored accordingly.

2014-03-28  Mario Sanchez Prada  <mario.prada@samsung.com>

        [GTK] Running minibrowser with url crashes in debug build
        https://bugs.webkit.org/show_bug.cgi?id=130492

        Reviewed by Martin Robinson.

        Use the ResourceRequest(const URL& url) constructor, instead of the
        one taking a String, to call WebPageProxy::loadRequest(), so we
        ensure that the passed URI is correctly constructed.

        * UIProcess/API/gtk/WebKitWebView.cpp:
        (webkit_web_view_load_uri): Create an URL out of a SoupURI and
        use that to create a ResourceRequest to pass to loadRequest().

2014-03-24  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Race condition when closing pages with network process enabled
        https://bugs.webkit.org/show_bug.cgi?id=129684

        When the last page of a web process is closed with the network
        process enabled, the UI process checks if the web process can be
        terminated and closes the connection with that web process. But
        right before that the Close message has been sent which also
        enables the process termination in the web process. Sometimes
        there's a race condition in the web process between the process
        termination triggered by the Close message and the one triggered
        by the socket being closed by the UI process.

        * WebProcess/WebProcess.cpp:
        (WebKit::WebProcess::shouldTerminate): Use a 1 second timeout so