@@ -362,10 +362,8 @@ static void webkitWebViewBaseContainerForall(GtkContainer* container, gboolean i
     WebKitWebViewBase* webView = WEBKIT_WEB_VIEW_BASE(container);
     WebKitWebViewBasePrivate* priv = webView->priv;
 
-    WebKitWebViewChildrenMap children = priv->children;
-    WebKitWebViewChildrenMap::const_iterator end = children.end();
-    for (WebKitWebViewChildrenMap::const_iterator current = children.begin(); current != end; ++current)
-        (*callback)(current->key, callbackData);
+    for (const auto& widget : priv->children.keys())
+        (*callback)(widget, callbackData);
 
     if (includeInternals && priv->inspectorView)
         (*callback)(priv->inspectorView, callbackData);
